--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
-set-window-option -g mode-keys vi # コピーモードのキーマップ。標準はemacs
-set-window-option -g automatic-rename off # ウィンドウ名が自動的に更新されないように(任意)
+set-window-option -g mode-keys vi
+set-window-option -g automatic-rename off
 
 set -g default-terminal "screen-256color"
 
