--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,14 @@
 set-window-option -g mode-keys vi
 set-window-option -g automatic-rename off
-
-set -g default-terminal "screen-256color"
+set-option -g prefix C-t
+unbind-key C-t
 
 set-option -g history-limit 10000
-set-option -g prefix C-g
-unbind-key C-b
+set-option -sg escape-time 10
+
+set -g terminal-overrides ',xterm-256color:Tc'
+set -g default-terminal "screen-256color"
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
 
 bind s split-window -v
 bind v split-window -h
@@ -15,3 +18,5 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+set-option -g default-shell $SHELL
