--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -55,7 +55,8 @@ map ctrl+shift+j neighboring_window down
 
 # scroll back {
 map ctrl+shift+; show_scrollback
-scrollback_pager_history_size 1000
+scrollback_lines 2000
+scrollback_pager_history_size 300
 #  scrollback_pager nvim --noplugin -u ~/.config/kitty/scrollback-pager/nvim/init.vim -c "autocmd TermOpen * normal G" -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
 scrollback_pager /usr/local/bin/nvim -u NONE -c "set nonumber nolist showtabline=0 foldcolumn=0" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
 # }
