--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,16 +1,11 @@
-# BEGIN_KITTY_THEME
-# seoulbones_dark
-include current-theme.conf
-# END_KITTY_THEME
-
 tab_bar_edge top
 copy_on_select true
 
 # Font {
-font_family      DejaVuSansMono Nerd Font Mono Book
-bold_font        DejaVuSansMono Nerd Font Mono Bold
-italic_font      DejaVuSansMono Nerd Font Mono Oblique
-bold_italic_font DejaVuSansMono Nerd Font Mono Bold Oblique
+font_family      DejaVu Sans Mono Nerd Font
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 font_size 11.6
 # }
@@ -31,8 +26,8 @@ map cmd+9 goto_tab 9
 # }
 
 # Windows {
-active_border_color #4E5D50
-inactive_border_color #787878
+# active_border_color #4E5D50
+# inactive_border_color #787878
 
 map F5 launch --location=hsplit
 map F6 launch --location=vsplit
@@ -58,9 +53,15 @@ map ctrl+shift+; show_scrollback
 scrollback_lines 2000
 scrollback_pager_history_size 300
 #  scrollback_pager nvim --noplugin -u ~/.config/kitty/scrollback-pager/nvim/init.vim -c "autocmd TermOpen * normal G" -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
-scrollback_pager /usr/local/bin/nvim -u NONE -c "set nonumber nolist showtabline=0 foldcolumn=0" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
+scrollback_pager /opt/homebrew/bin/nvim -u NONE -c "set mouse-=a" -c "set nonumber nolist showtabline=0 foldcolumn=0" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
+#  scrollback_pager /opt/homebrew/bin/nvim -c 'setlocal nonumber nolist showtabline=0 foldcolumn=0|Man!' -c "autocmd VimEnter * normal G" -
 # }
 
 # layout {
 map ctrl+alt+g goto_layout grid
 # }
+
+# BEGIN_KITTY_THEME
+# Catppuccin-Frappe
+include current-theme.conf
+# END_KITTY_THEME
