--- a/starship.toml
+++ b/starship.toml
@@ -38,3 +38,7 @@ surface0 = "#414559"
 base = "#303446"
 mantle = "#292c3c"
 crust = "#232634"
+
+[kubernetes]
+format = '[⛴  $context \($namespace\)](dimmed green) '
+disabled = false
