--- a/.gitconfig
+++ b/.gitconfig
@@ -1,15 +1,13 @@
+[includeIf "gitdir:~/ghq/github.com/"]
+  path = ~/.gitconfig_gh_personal
 [core]
     pager = delta
-
 [interactive]
     diffFilter = delta --color-only
-
 [delta]
     navigate = true
     syntax-theme = Dracula
-
 [merge]
     conflictstyle = diff3
-
 [diff]
     colorMoved = default
